--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start --dev-client",
+    "start": "clear && npx expo start --dev-client",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
@@ -38,7 +38,10 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.6.0",
+    "react-native-svg": "15.2.0",
+    "react-native-swipe-list-view": "^3.2.9",
+    "react-native-toast-message": "^2.2.0",
+    "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
@@ -48,8 +51,11 @@
     "@types/react-test-renderer": "^18.0.7",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.1.2",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "prettier": "3.3.3",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
