--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "react-native": "0.74.5",
     "react-native-fetch-api": "^3.0.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-markdown-display": "^7.0.2",
+    "react-native-pager-view": "6.3.0",
     "react-native-polyfill-globals": "^3.1.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
@@ -49,8 +51,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.1.0",
     "react-native-web": "~0.19.10",
-    "web-streams-polyfill": "^3.2.1",
-    "react-native-pager-view": "6.3.0"
+    "web-streams-polyfill": "^3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
